openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: scavenger-hunt-game
    group: escoffier.me.demo
  name: scavenger-hunt-game
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: scavenger-hunt-game
    group: escoffier.me.demo
