openshift/route.yaml
apiVersion: v1
kind: Route
metadata:
  name: scavenger-hunt-game
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: scavenger-hunt-game
  tls:
    termination: edge
